<resources>
    <string name="app_name">Test_2</string>
    <string name="newLable">HI WELCOME</string>
    <string name="woof_user">User Name</string>
    <string name="woof_mail">E mail</string>
    <string name="woof_pass">Password</string>
    <string name="woof_usertxt" />
    <string name="woof_mailtxt" />
    <string name="woof_passtxt" />
    <string name="woof_btnup">Sign Up</string>
    <string name="woof_btnDaily">Daily Schedule</string>
    <string name="woof_btnVaccin">Vaccine Schedule</string>
    <string name="woof_addTask">Add Task : </string>
    <string name="woof_addDate">Add schedule date : </string>
    <string name="woof_Btnaddtask">Create Task</string>
    <string name="woof_taskedit">Add Task</string>
    <string name="woof_dateedit">Date</string>
    <string name="woof_updateD">Update Task</string>
    <string name="woof_deleteD">Delete Task</string>
    <string name="woof_start">Get Started</string>
    <string name="woof_hometxt">Find Some Time</string>
    <string name="woof_homwtxt2">to groom your pet</string>
    <string name="vaccinne_viewtxt">make schedules</string>
    <string name="Vaccinne_tasklbl">Enter vaccinne name :</string>
    <string name="Vaccinne_datelbl">Enter Date :</string>
    <string name="Vaccinne_vetlbl">Enter vetonery sergeon:</string>
    <string name="Vaccinne_insert">Insert</string>
    <string name="VaccEdit_tasklbl">Vaccinne Name :</string>
    <string name="VaccEdit_datelbl">Vaccinne Date :</string>
    <string name="VaccEdit_vetlbl">Vetonery Sergeon Name :</string>
    <string name="VaccEdit_update">Update</string>
    <string name="VaccEdit_Delete">Delete</string>
    <string name="Vabtn_Sel_Date"><![CDATA[>]]></string>
    <string name="woof_addVaccine">Vaccine Name</string>
    <string name="woof_addvaccinedate">Vaccine Date</string>
    <string name="btn_sel_Vdate"><![CDATA[>]]></string>
    <string name="woof_BtnaddVaccine">Schedule Vaccine Date</string>
    <string name="woof_vaccineedit">Vaccine Name</string>
    <string name="woof_vacdateedit">Vaccine Date</string>
    <string name="btn_set_Vdate"><![CDATA[>]]></string>
    <string name="woof_deleteV">delete vaccine details</string>
    <string name="woof_updateV">Update Vaccine Details</string>
</resources>