<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_6"
    tools:context=".VaccinneAdd">

    <TextView
        android:id="@+id/woof_addVaccine"
        android:layout_width="135dp"
        android:layout_height="28dp"
        android:text="@string/woof_addVaccine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/woof_addvaccineDate"
        android:layout_width="198dp"
        android:layout_height="28dp"
        android:text="@string/woof_addvaccinedate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/woof_Vaccinetxt"
        android:layout_width="257dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="add vaccine name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/woof_VaccineDatetxt"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="Select the date"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/btn_sel_Vdate"
        android:layout_width="70dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/btn_sel_Vdate"
        android:text="@string/btn_sel_Vdate"
        app:layout_constraintEnd_toEndOf="@+id/woof_VaccineDatetxt"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="@+id/woof_VaccineDatetxt"
        app:layout_constraintTop_toTopOf="@+id/woof_VaccineDatetxt"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/woof_BtnaddVaccine"
        android:layout_width="269dp"
        android:layout_height="55dp"
        android:text="@string/woof_BtnaddVaccine"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sel_Vdate"
        app:layout_constraintVertical_bias="0.241" />

</androidx.constraintlayout.widget.ConstraintLayout>